objects/dfsle__EnvelopeConfigurationRecipient__c.object
<CustomObject>
    <fields>
        <fullName>dfsle__AccessCode__c</fullName>
        <description>Access Code</description>
        <inlineHelpText>Access Code</inlineHelpText>
        <label>Access Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfsle__EmailMessage__c</fullName>
        <label>Email Message</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>dfsle__EmailSubject__c</fullName>
        <label>Email Subject</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dfsle__Email__c</fullName>
        <label>Recipient Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfsle__EnvelopeConfiguration__c</fullName>
        <label>DocuSign Envelope Configuration</label>
        <referenceTo>dfsle__EnvelopeConfiguration__c</referenceTo>
        <relationshipLabel>Recipients</relationshipLabel>
        <relationshipName>Recipients</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>dfsle__Filter__c</fullName>
        <description>Recipient filter</description>
        <label>Recipient filter</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dfsle__HostEmail__c</fullName>
        <label>Host Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfsle__HostName__c</fullName>
        <label>Host Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfsle__IdCheckRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>$ID Check</description>
        <label>ID Check Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfsle__IncrementRoutingOrder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Increment routing order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfsle__Language__c</fullName>
        <label>Language</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfsle__Name__c</fullName>
        <label>Extension</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfsle__Note__c</fullName>
        <description>Note</description>
        <label>Private Message</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dfsle__ReadOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Read-only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfsle__Relationship__c</fullName>
        <label>Relationship</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dfsle__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfsle__Roles__c</fullName>
        <label>Roles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfsle__RoutingOrder__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Routing Order</inlineHelpText>
        <label>Routing Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dfsle__Sequence__c</fullName>
        <label>Sequence</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dfsle__SignNow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sign now</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfsle__SigningGroupId__c</fullName>
        <inlineHelpText>Signing Group ID</inlineHelpText>
        <label>Signing Group ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dfsle__SigningGroupName__c</fullName>
        <label>Signing Group Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfsle__SmsPhoneNumber__c</fullName>
        <label>SMS Phone Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfsle__SourceId__c</fullName>
        <label>Source ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfsle__Type__c</fullName>
        <description>Type</description>
        <inlineHelpText>Type</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Signer</fullName>
                    <default>true</default>
                    <label>Needs to Sign</label>
                </value>
                <value>
                    <fullName>InPersonSigner</fullName>
                    <label>In Person Signer</label>
                </value>
                <value>
                    <fullName>CarbonCopy</fullName>
                    <label>Receives a Copy</label>
                </value>
                <value>
                    <fullName>CertifiedDelivery</fullName>
                    <label>Needs to View</label>
                </value>
                <value>
                    <fullName>Agent</fullName>
                    <label>Specify Recipients</label>
                </value>
                <value>
                    <fullName>Editor</fullName>
                    <label>Allow to Edit</label>
                </value>
                <value>
                    <fullName>Intermediary</fullName>
                    <label>Update Recipients</label>
                </value>
                <value>
                    <fullName>Seal</fullName>
                </value>
                <value>
                    <fullName>Witness</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DocuSign Envelope Configuration Recipien</label>
    <nameField>
        <displayFormat>DEC-{0000000}</displayFormat>
        <label>Recipient</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocuSign Envelope Configuration Recipien</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>